# mimo

./: NOTES.md
ai/: Cargo.toml
automations/: Cargo.toml
core/: Cargo.toml
core/src/: main.rs
services/: Cargo.toml
tools/: Cargo.toml
types/src/: lib.rs
ui/: Cargo.toml
ui/src/: lib.rs  main.rs
