[package]
name = "ui"
version = "0.1.0"
edition = "2024"
authors = ["Matthias Matthies <kontakt@matthias-matthies.com>"]
description = "UI Crate for Mimo."
publish = false

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
# crossterm = { version = "0.29.0" }
log = "0.4.27"
# shlex = "1.3.0"
